--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "@web3-react/core": "6.1.9",
     "axios": "^1.8.1",
     "babel-plugin-styled-components": "1.10.7",
+    "blockies-react-svg": "^0.0.13",
     "browserslist": "4.14.6",
     "buffer": "6.0.3",
     "chalk": "5.0.1",
@@ -46,6 +47,7 @@
     "rc-pagination": "^5.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-infinite-scroller": "^1.2.6",
     "react-router-dom": "^7.2.0",
     "react-slider": "^2.0.6",
     "sonner": "^2.0.1",
