--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -12,7 +12,8 @@
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
-    "jsx": "react-jsx"
+    "jsx": "react-jsx",
+    "strict": false
   },
   "include": ["src"]
 }
