--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "push-portal",
   "private": true,
   "version": "0.0.0",
+  "homepage": "https://portal.push.org",
   "type": "module",
   "scripts": {
     "dev": "vite",
