--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "typescript": "~5.7.2",
     "typescript-eslint": "^8.26.0",
     "vite": "^6.2.0",
+    "vite-plugin-gh-pages": "^1.0.1",
     "vite-plugin-node-polyfills": "^0.21.0",
     "vite-plugin-require": "^1.1.14",
     "vite-plugin-svgr": "^4.3.0",
