--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "rc-pagination": "^5.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-helmet": "^6.1.0",
     "react-infinite-scroller": "^1.2.6",
     "react-router-dom": "^6.9.0",
     "react-slider": "^2.0.6",
