--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "homepage": "https://portal.push.org",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "start": "vite",
-    "build": "vite build",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "lint": "eslint .",
-    "preview": "vite preview",
-    "build:pr:preview": "node build.mjs preview && NODE_OPTIONS=--max-old-space-size=8192 vite build",
+    "build:pr:preview": "node build.mjs preview && NODE_OPTIONS=--max-old-space-size=8192 next build",
     "deploy": "node build.mjs prod && yarn build && echo 'portal.push.org' > ./build/CNAME && gh-pages -d build -r https://github.com/push-protocol/push-portal-prod-deployment"
   },
   "dependencies": {
@@ -27,6 +26,7 @@
     "@radix-ui/react-tooltip": "^1.1.8",
     "@reach/combobox": "^0.18.0",
     "@reach/tabs": "^0.18.0",
+    "@svgr/webpack": "^8.1.0",
     "@table-library/react-table-library": "^4.1.7",
     "@tanstack/react-query": "^5.44.0",
     "@tanstack/react-query-devtools": "^5.44.0",
@@ -47,6 +47,7 @@
     "eth-sig-util": "^3.0.1",
     "ethers": "^5.7.2",
     "firebase": "^10.12.2",
+    "next": "13.4.19",
     "openpgp": "^5.5.0",
     "rc-pagination": "^5.1.0",
     "react": "^19.0.0",
@@ -64,7 +65,6 @@
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@types/styled-components": "^5.1.34",
-    "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^8.51.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.1",
@@ -72,13 +72,7 @@
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^15.15.0",
     "typescript": "~5.7.2",
-    "typescript-eslint": "^8.26.0",
-    "vite": "^6.2.0",
-    "vite-plugin-node-polyfills": "^0.21.0",
-    "vite-plugin-require": "^1.1.14",
-    "vite-plugin-svgr": "^4.3.0",
-    "vite-plugin-top-level-await": "^1.4.1",
-    "vite-tsconfig-paths": "^4.3.2"
+    "typescript-eslint": "^8.26.0"
   },
   "packageManager": "yarn@4.2.2+sha512.c44e283c54e02de9d1da8687025b030078c1b9648d2895a65aab8e64225bfb7becba87e1809fc0b4b6778bbd47a1e2ab6ac647de4c5e383a53a7c17db6c3ff4b"
 }
