change build directory

--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -34,10 +34,10 @@ jobs:
       - name: Deploy preview
         uses: rossjrw/pr-preview-action@v1.4.7
         with:
-          source-dir: ./build/
+          source-dir: ./dist/
 
       - uses: rossjrw/pr-preview-action@v1.4.7
         if: github.event.action == 'closed' && !github.event.pull_request.merged
         with:
-          source-dir: ./build/
+          source-dir: ./dist/
           action: remove
