--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "start": "next start",
     "lint": "eslint .",
     "build:pr:preview": "node build.mjs preview && NODE_OPTIONS=--max-old-space-size=8192 next build",
-    "deploy": "node build.mjs prod && yarn build && yarn export && echo 'portal.push.org' > ./out/CNAME && gh-pages -d out -r https://github.com/push-protocol/push-portal-prod-deployment"
+    "deploy": "node build.mjs prod && yarn build && yarn next export && echo 'portal.push.org' > ./out/CNAME && gh-pages -d out -r https://github.com/push-protocol/push-portal-prod-deployment"
   },
   "dependencies": {
     "@babel/runtime": "^7.26.9",
