chore: add spinboard feature and probability

--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "eth-sig-util": "^3.0.1",
     "ethers": "^5.7.2",
     "firebase": "^10.12.2",
+    "gsap": "^3.14.1",
     "openpgp": "^5.5.0",
     "rc-pagination": "^5.1.0",
     "react": "^19.0.0",
